Migrate parts to LinkedHashMap